--- a/package.json
+++ b/package.json
@@ -1,40 +1,16 @@
 {
-  "name": "boilerplate",
-  "version": "1.0.0",
-  "main": "server/index.js",
-  "scripts": {
-    "postinstall": "webpack",
-    "dev": "nodemon --watch server & webpack --watch --mode development",
-    "start": "node server/index",
-    "test": "jest",
-    "knex": "knex"
-  },
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "body-parser": "^1.18.3",
-    "css-loader": "^1.0.0",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-jwt": "^5.3.1",
-    "jsonwebtoken": "^8.3.0",
-    "jwt-decode": "^2.2.0",
-    "knex": "^0.15.2",
-    "nodemon": "^1.18.4",
-    "pg": "^7.4.3",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "sodium": "^2.0.3",
-    "sqlite3": "^4.0.2",
-    "style-loader": "^0.23.0",
-    "superagent": "^3.8.3",
-    "webpack": "^4.18.0",
-    "webpack-cli": "^3.1.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
